# Q4_25_Builders_100xtaps

./: README.md
app/: package.json  pnpm-lock.yaml
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/leaderboard/: page.tsx
app/src/app/profile/: page.tsx
app/src/components/game/: ActiveBets.tsx  GameCanvas.tsx  GameHeader.tsx
app/src/components/providers/: SessionProvider.tsx  WalletProvider.tsx
app/src/components/ui/: ConnectWalletButton.tsx  Navigation.tsx
app/src/contexts/: GameContext.tsx
app/src/hooks/: useBetting.ts  useBettingProgram.ts  useGameState.ts  usePriceWebSocket.ts  useProxyAccount.ts  useSessionManager.ts
app/src/lib/: constants.ts  types.ts  utils.ts
app/src/lib/idl/: betting_program.json  idlType.ts
tap-trading/: .env  Anchor.toml
tap-trading/programs/tap-trading/: Cargo.toml
tap-trading/programs/tap-trading/src/: errors.rs  lib.rs
tap-trading/programs/tap-trading/src/instructions/: create_bet.rs  create_proxy_account.rs  deposit.rs  initialize_market.rs  mod.rs  settle_bet.rs  withdraw_owner.rs  withdraw_user.rs
tap-trading/programs/tap-trading/src/state/: bet.rs  market.rs  mod.rs  proxy_account.rs
tap-trading/scripts/: initialize_market.ts
tap-trading/tests/: tap-trading.ts
ws/: index.ts  package.json
