[package]
name = "tap-trading"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tap_trading"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
# anchor-lang = "0.30.1"
anchor-lang = "0.32.1"
# session-keys = { git = "https://github.com/magicblock-labs/session-keys",  features = ["no-entrypoint"] }
# session-keys = { version = "2.0.6", features = ["no-entrypoint"] }
session-keys = { path = "/home/pankaj/turbine/session-keys/programs/gpl_session", features = ["no-entrypoint"] }


# session-keys = { version = "=0.1.14", features = ["no-entrypoint"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
